--- a/website/src/pages/ships/bs808.md
+++ b/website/src/pages/ships/bs808.md
@@ -2,22 +2,23 @@
 hide_table_of_contents: true
 ---
 
-# Welder - Modular Ship for Starbase
+# Welder BS808
 
-This site houses the blueprints and manual for modular ship Welder for the game Starbase by Frozenbyte.
+The Welder BS808 is the barebones example ship that can be build using the Welder framework.
+The body is an empty shell with flooring and it has bay doors on each side.
 
-## Goal
+[Download the blueprint](https://github.com/vinteo/starbase-ship-welder/raw/main/blueprints/ships/bs808/welder_bs808.fbe)
 
-The goal of the Welder ship is to be a modular ship which can be snapped together using modules in the Starbase Ship Designer and welded together with minial additional changes.
-It is a ship framework that has a restricted shape so the modules are easy to use and include on the ship.
+[Ship Manual](../docs/flying)
 
-The provided modules are meant to be a guide and provide basic examples of how modules work. It is the hope that the community will build more modules to share.
-
-The blueprints for the ship and its modules are provided for free. Take a look at some prebuilt ships [here](/ships).
+<img src="../photos/bs808/20220712203129_1.jpg" width="600" /><img src="../photos/bs808/20220712203137_1.jpg" width="600" />
+<img src="../photos/bs808/20220712203153_1.jpg" width="600" /><img src="../photos/bs808/20220712203209_1.jpg" width="600" />
+<img src="../photos/bs808/20220712203227_1.jpg" width="600" /><img src="../photos/bs808/20220712203240_1.jpg" width="600" />
+<img src="../photos/bs808/20220712203250_1.jpg" width="600" /><img src="../photos/bs808/20220712203305_1.jpg" width="600" />
 
 ## Features
 
-The base ship has the following features:
+The ship has the following features:
 
 - Standard Cruise function
 - Turtle and Sloth functions with adjustable rates
@@ -39,13 +40,12 @@ The base ship has the following features:
 - Timer panel
 - Odometer panel
 
-## License
+## Build Cost
 
-This work is licensed under a
-[Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License][cc-by-nc-sa].
+![Build Cost](/photos/bs808/build_cost.png)
 
-[![CC BY-NC-SA 4.0][cc-by-nc-sa-image]][cc-by-nc-sa]
+## Changelog
 
-[cc-by-nc-sa]: http://creativecommons.org/licenses/by-nc-sa/4.0/
-[cc-by-nc-sa-image]: https://licensebuttons.net/l/by-nc-sa/4.0/88x31.png
-[cc-by-nc-sa-shield]: https://img.shields.io/badge/License-CC%20BY--NC--SA%204.0-lightgrey.svg
+### v1.0.0 (Current) - 13/07/2022
+
+- Initial release
