ship: welder sv812 version 1.0.0

--- a/website/src/pages/ships/sv812.md
+++ b/website/src/pages/ships/sv812.md
@@ -2,33 +2,34 @@
 hide_table_of_contents: true
 ---
 
-# Welder TK810
+# Welder SV812
 
-The Welder TK810 is a supply or tanker ship with a a supply of propellant and T2 fuel rods.
-It also has crafting benches and 64 ore crates for storage.
+The Welder SV812 is a salvager ship with a tow beam that is capable of towing a ship up to 16,000,000kg in mass.
+It also has crafting benches, 32 ore crates for storage and a cage area in its body to bolts parts on plus bay door access on each side.
 
-[Download the blueprint](https://github.com/vinteo/starbase-ship-welder/raw/main/blueprints/ships/tk810/welder_tk810.fbe)
+[Download the blueprint](https://github.com/vinteo/starbase-ship-welder/raw/main/blueprints/ships/sv812/welder_sv812.fbe)
 
 [Ship Manual](../docs/flying)
 
-<img src="../photos/tk810/20220714161050_1.jpg" width="600" /><img src="../photos/tk810/20220714161057_1.jpg" width="600" />
-<img src="../photos/tk810/20220714161117_1.jpg" width="600" /><img src="../photos/tk810/20220714161135_1.jpg" width="600" />
-<img src="../photos/tk810/20220714161158_1.jpg" width="600" /><img src="../photos/tk810/20220714161206_1.jpg" width="600" />
+<img src="../photos/sv812/20220715182720_1.jpg" width="600" /><img src="../photos/sv812/20220715182730_1.jpg" width="600" />
+<img src="../photos/sv812/20220715182754_1.jpg" width="600" /><img src="../photos/sv812/20220715182929_1.jpg" width="600" />
+<img src="../photos/sv812/20220715182808_1.jpg" width="600" /><img src="../photos/sv812/20220715182826_1.jpg" width="600" />
 
 ## Features
 
 The ship has the following features:
 
-- 64 ore crates
+- Tow beam that is capable of towing a ship up to 16,000,000kg in mass
+- 32 ore crates
 - Crafting benches with meter upgrade for basic bench
 - Standard Cruise function
 - Turtle and Sloth functions with adjustable rates
 - Transponder system with ping function
 - Two external and two internal resource bridges
 - Auto generator rate script with adjustable minimum rate
-- 30 T3 generators with 30 T2 enhancers from 10 T3 fuel chambers and 92 spare rods on racks
+- 48 T3 generators with 48 T2 enhancers from 16 T3 fuel chambers and 32 spare rods on racks
 - Radiators and heat sinks that provide more than adequate cooling
-- 48 large propellant tanks with 576,000,000 units of propellant
+- 12 large propellant tanks with 144,000,000 units of propellant
 - Propellant time and fuel time panels
 - 140 batteries
 - Two plasma thrusters with five rings each, 32 T3 box and 32 T3 triangle thrusters providing forward thrust
@@ -43,10 +44,10 @@ The ship has the following features:
 
 ## Build Cost
 
-![Build Cost](/photos/tk810/build_cost.png)
+![Build Cost](/photos/sv812/build_cost.png)
 
 ## Changelog
 
-### v1.0.0 (Current) - 14/07/2022
+### v1.0.0 (Current) - 15/07/2022
 
 - Initial release
